<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    android:fillViewport="true"
    android:paddingBottom="16dp"
    app:layout_scrollFlags="scroll">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        app:cardCornerRadius="16dp"
        app:cardUseCompatPadding="true"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="2dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/profileImage"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                app:layout_collapseMode="parallax"
                app:roundAsCircle="true"
                fresco:actualImageScaleType="centerCrop"
                fresco:placeholderImage="@drawable/ic_person"
                fresco:placeholderImageScaleType="centerCrop" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/typeSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/darker_gray"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black">
            </com.jaredrummler.materialspinner.MaterialSpinner>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnamedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/surname"
                    android:imeOptions="actionNext"
                    android:paddingStart="8dp"
                    android:gravity="bottom"
                    android:translationY="4dp"
                    android:theme="@style/EditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:paddingStart="8dp"
                    android:gravity="bottom"
                    android:translationY="4dp"
                    android:theme="@style/EditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/patronymicLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/patronymicEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/patronymic"
                    android:imeOptions="actionNext"
                    android:gravity="bottom"
                    android:translationY="4dp"
                    android:paddingStart="8dp"
                    android:theme="@style/EditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:paddingStart="8dp"
                    android:gravity="bottom"
                    android:translationY="4dp"
                    android:theme="@style/EditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthdateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthdateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/birthdate_"
                    android:imeOptions="actionDone"
                    android:inputType="date"
                    android:paddingStart="8dp"
                    android:gravity="bottom"
                    android:translationY="4dp"
                    android:theme="@style/EditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/positionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/positionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/position_"
                    android:imeOptions="actionNext"
                    android:paddingStart="8dp"
                    android:gravity="bottom"
                    android:translationY="4dp"
                    android:theme="@style/EditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/officePhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipChildren="false"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/officePhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/office_phone_"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:paddingStart="8dp"
                    android:gravity="bottom"
                    android:translationY="4dp"
                    android:theme="@style/EditTextStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="16dp"
                android:enabled="false"
                android:text="@string/save"
                android:textColor="@color/white"
                app:backgroundTint="@color/color_states_materialbutton"
                app:cornerRadius="16dp"
                app:rippleColor="@color/colorPrimaryDark"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="2dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>