<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@android:color/white"
    android:elevation="4dp"
    app:cardCornerRadius="16dp"
    app:strokeColor="@color/colorAccent"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_collapseMode="parallax"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:roundAsCircle="true"
            fresco:actualImageScaleType="centerCrop"
            fresco:placeholderImage="@drawable/ic_person"
            fresco:placeholderImageScaleType="centerCrop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fTextView"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Пановахуснутдинова">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/iTextView"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/fTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Маргарита">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/oTextView"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/iTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Владимировна">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/telTextView"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            tools:text="8-911-123-45-67">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/friendGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="titleBirthdateTextView,birthdateTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleBirthdateTextView"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/birthdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/birthdateTextView"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_bold"
            tools:text="10.01.2000"
            app:layout_constraintStart_toEndOf="@+id/titleBirthdateTextView"
            app:layout_constraintTop_toBottomOf="@+id/imageView">
        </androidx.appcompat.widget.AppCompatTextView>


        <androidx.constraintlayout.widget.Group
            android:id="@+id/colleaguesGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="titlePositionTextView,positionTextView,titleOfficePhoneTextView,officePhoneTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titlePositionTextView"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/position"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/positionTextView"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            tools:text="Программист"
            app:layout_constraintStart_toEndOf="@+id/titlePositionTextView"
            app:layout_constraintTop_toBottomOf="@+id/imageView">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleOfficePhoneTextView"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/office_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePositionTextView">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/officePhoneTextView"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            tools:text="8-911-123-45-67"
            app:layout_constraintStart_toEndOf="@+id/titleOfficePhoneTextView"
            app:layout_constraintTop_toBottomOf="@+id/titlePositionTextView">
        </androidx.appcompat.widget.AppCompatTextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
